<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myTicket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_">Login:</string>
    <string name="email_">"E-mail: "</string>
    <string name="password_">Password:</string>
    <string name="send_">Send</string>
    <string name="hint_to_send_registration_">Нажмите,чтобы отправить данные регистрации</string>
    <string name="warning_lessPasswordLength">&quot;Длина пароля не должна быть меньше 9 символов!!!&quot;</string>
    <string name="noinput">Введены не все данные!!!!!!</string>

</resources>
